[gd_scene load_steps=2 format=3 uid="uid://3qlngm0aq1qu"]

[ext_resource type="Script" path="res://scripts/levels/level_selection.gd" id="1_tkq1q"]

[node name="LevelSelection" type="CanvasLayer"]
script = ExtResource("1_tkq1q")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.231372, 0.289633, 1)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_top = 16.0
offset_right = 45.5
offset_bottom = 39.0
grow_horizontal = 2
text = "Select Level"
horizontal_alignment = 1

[node name="Levels" type="Node" parent="."]

[node name="Level1" type="Node2D" parent="Levels"]
position = Vector2(32, 72)

[node name="LevelNameLabel" type="Label" parent="Levels/Level1"]
offset_right = 40.0
offset_bottom = 23.0
text = "Level 1"

[node name="RatingLabel" type="Label" parent="Levels/Level1"]
offset_top = 24.0
offset_right = 41.0
offset_bottom = 47.0
text = "☆☆☆"
horizontal_alignment = 1

[node name="Level1PlayButton" type="Button" parent="Levels/Level1"]
offset_top = 48.0
offset_right = 41.0
offset_bottom = 79.0
text = "Play"

[node name="Level2" type="Node2D" parent="Levels"]
position = Vector2(104, 72)

[node name="LevelNameLabel" type="Label" parent="Levels/Level2"]
offset_right = 40.0
offset_bottom = 23.0
text = "Level 2"

[node name="RatingLabel" type="Label" parent="Levels/Level2"]
offset_top = 24.0
offset_right = 41.0
offset_bottom = 47.0
text = "☆☆☆"
horizontal_alignment = 1

[node name="Level2PlayButton" type="Button" parent="Levels/Level2"]
offset_top = 48.0
offset_right = 41.0
offset_bottom = 79.0
text = "Play"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 40.0
offset_top = 224.0
offset_right = 136.0
offset_bottom = 255.0
text = "Main Menu"

[connection signal="pressed" from="Levels/Level1/Level1PlayButton" to="." method="_on_level_1_play_button_pressed"]
[connection signal="pressed" from="Levels/Level2/Level2PlayButton" to="." method="_on_level_2_play_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
